@@ -1,3 +1,9 @@
+TAG: pubmed2geneload-6-0-12-?
+DATE: 02/07/2018
+STAFF: lec
+CHANGES:
+TR12662/GMC/add autosequence
+
 TAG: pubmed2geneload-6-0-11-4
 TAG: pubmed2geneload-6-0-11-3
 TAG: pubmed2geneload-6-0-11-2
